Using GitHub actions for CI, ditched Cirrus and Travis

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,11 +1,13 @@
 # Documentation: https://github.com/JuliaCI/Appveyor.jl
 environment:
   matrix:
-  - julia_version: 1.0
-  - julia_version: nightly
+    - julia_version: 1.0
+    - julia_version: nightly
 platform:
-  - x86
   - x64
+  - x86
+cache:
+  - '%USERPROFILE%\.julia\artifacts'
 matrix:
   allow_failures:
     - julia_version: nightly
